# ucls-hacker-functions

./: .gitignore  README.md  pyproject.toml
.ci-cd/: gitlab-ci.yml
src/hacker_functions/: fn_01_easy.py  fn_02_medium.py  fn_03_hard.py  fn_04_xtreme.py
tests/: test_fn_01_easy.py  test_fn_02_medium.py  test_fn_03_hard.py  test_fn_04_xtreme.py
