[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hacker_functions"
version = "0.1.0"
description = "Capstone project teaching testing and CI/CD through finding seeded bugs"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
